# to-do-manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.test  README.md  docker-compose-test.yaml  docker-compose.yaml  mysql.md  pyproject.toml  requirements.txt  start_server.sh
config/: __init__.py  asgi.py  settings.py  urls.py
core/: __init__.py
tasks/: __init__.py  admin.py  apps.py  forms.py  logging_config.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_project_project_date.py  0002_remove_project_description_remove_task_description.py  0003_project_deleted_at.py  0004_remove_project_deleted_at_project_deleted.py  0005_alter_task_priority.py  0006_alter_task_project.py
tasks/static/css/: main_page_styles.css
tasks/static/scripts/: Calendar.js  ProjectManager.js  TaskManager.js  main.js
tasks/templates/: demo.html  main.html  styles.css  temp.html
tasks/templates/partials/: calendar.html  task_item.html  task_list.html  task_partial.html
tasks/templates/projects/: create_project.html  delete_project.html  project_detail.html  projects_list.html  update_project.html
tasks/templates/tasks/: add_task.html  delete_task.html  update_task.html
tasks/tests/: __init__.py  test_models.py  test_views.py
